--- a/src/_includes/partials/navbar.html
+++ b/src/_includes/partials/navbar.html
@@ -1,4 +1,4 @@
-<nav class="section nav" x-data="{ isOpen: false }" @keydown.escape="isOpen = false"  @click.away="isOpen = false">
+<nav class="section nav">
     <!--Logo etc-->
     <div class="nav-logo">
         <a href="/">
@@ -7,27 +7,22 @@
         </a>
     </div>
 
-    <!--Toggle button (hidden on large screens)-->
-    <!-- <button @click="isOpen = !isOpen" type="button" class="ml-auto block lg:hidden px-2 text-primary-500 hover:text-primary-500 focus:outline-none focus:text-primary-500" :class="{ 'transition transform-180': isOpen }" aria-label="Menu">
-        <svg class="h-6 w-6 fill-current" xmlns="http://www.w3.org/2000/svg" viewbox="0 0 24 24">
-            <path x-show="isOpen" fill-rule="evenodd" clip-rule="evenodd" d="M18.278 16.864a1 1 0 0 1-1.414 1.414l-4.829-4.828-4.828 4.828a1 1 0 0 1-1.414-1.414l4.828-4.829-4.828-4.828a1 1 0 0 1 1.414-1.414l4.829 4.828 4.828-4.828a1 1 0 1 1 1.414 1.414l-4.828 4.829 4.828 4.828z"/>
-            <path x-show="!isOpen" fill-rule="evenodd" d="M4 5h16a1 1 0 0 1 0 2H4a1 1 0 1 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2zm0 6h16a1 1 0 0 1 0 2H4a1 1 0 0 1 0-2z"/>
-        </svg>
-    </button> -->
-
-    <!--Menu-->
-    <div class="navigation" x-show.transition="true">
+    <input type="checkbox" name="menu" id="menu">
+    <div class="navigation">
 
         {% if navigation.items %}
 
             <ul class="">
                 {% for item in navigation.items %}
-                    <li class="nav-item mr-3">
-                        <a @click="isOpen = false" class="text-ml inline-block text-gray-500 no-underline hover:text-indigo-500 py-2 px-4" href="{{ item.url }}">{{ item.text }}</a>
+                    <li class="nav-item ">
+                        <a href="{{ item.url }}">{{ item.text }}</a>
                     </li>
                 {% endfor %}
             </ul>
 
         {% endif %}
     </div>
+    <label for="menu">
+        <img src="/static/ui/dots-three.svg" alt="">
+    </label>
 </nav>
