--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -108,7 +108,7 @@ nav {
         &:has(input#menu:checked) {
             display: grid;
             gap: 10px;
-            grid-template-columns: 260px 1fr;
+            grid-template-columns: min(260px, 1fr) 1fr;
             grid-template-rows: repeat(2, auto);
             label {
                 grid-area: 1 / 2 / 2 / 3;
@@ -165,6 +165,29 @@ footer {
         margin-left: auto;
         margin-right: 80px;
         padding-top: 20px;
+    }
+    @media screen and (max-width: 950px) {
+        display: grid;
+        gap: 10px;
+        grid-template-columns: 200px 1fr;
+        grid-template-rows: repeat(2, 1fr);
+        align-items: center;
+        .col-1 { grid-area: 1 / 1 / 3 / 2; }
+        .col-2 { 
+            padding: 0;
+            grid-area: 1 / 2 / 2 / 3; 
+        }
+        .col-3 { 
+            grid-area: 2 / 2 / 3 / 3; 
+            margin: 0;
+            padding: 0;
+        }
+    }
+    @media screen and (max-width: 470px) {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
     }
 }
 
