--- a/src/_includes/blog.html
+++ b/src/_includes/blog.html
@@ -3,10 +3,10 @@ title: Our Blog
 layout: default
 ---
 
-<div class="container max-w-3xl mt-6 px-6">
+<article>
 
     <h1 class="font-bold text-5xl">{{title}}</h1>
 
     {{ content | safe }}
 
-</div>
+</article>
