--- a/src/static/css/main.css
+++ b/src/static/css/main.css
@@ -6,9 +6,6 @@
 }
 
 :root {
-    /* --bg: #F4EFE3;
-    --red: #97010b;
-    --brown: #7C5212; */
     --radius: 5px;
 
     --bg: #fafafa;
@@ -127,17 +124,6 @@ nav {
     }
 }
 
-/* .section {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-    &.full-bleed {
-        max-width: unset;
-        width: 100vw;
-        padding: 0;
-    }
-} */
-
 h1, h2, h3, h4 {
     color: var(--accent);
     text-transform: uppercase;
@@ -195,7 +181,6 @@ footer {
 .page-home {
     .hero {
         width: 100%;
-        /* aspect-ratio: 5/3; */
         height: calc(100vh - 20px);
         background-image: url('/static/img/hero.jpg');
         background-size: cover;
@@ -204,40 +189,6 @@ footer {
         border-radius: var(--radius);
         position: relative;
         overflow: hidden;
-        /* .nav {
-            background-color: white;
-            border-radius: var(--radius);
-            width: calc(100% - 40px);
-            top: 20px;
-            left: 20px;
-            position: fixed;
-            padding: 10px 20px;
-            z-index: 5;
-            .nav-logo {
-                a {
-                    font-size: 21px;
-                    color: var(--red);
-                    text-decoration: none;
-                    font-weight: 900;
-                    text-transform: uppercase;
-                    letter-spacing: -1px;
-                    img {
-                        transform: translateY(2px);
-                    }
-                    &:hover {
-                        text-decoration: none;
-                    }
-                }
-            }
-            a {
-                color: rgb(75, 75, 75);
-                text-decoration: none;
-            }
-            a:hover {
-                    color: var(--red);
-                text-decoration: underline;
-            }
-        } */
         .nickname {
             position: absolute;
             bottom: 20px;
@@ -341,3 +292,15 @@ footer {
     }
 }
 
+.secondary-page {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    main {
+        margin-top: 100px;
+        flex-grow: 1;
+        article {
+            padding: 10px;
+        }
+    }
+}
